position:absolute in mb-element-popup-dialog to avoid jumping dialog

--- a/Resources/styles/dataManager.element.scss
+++ b/Resources/styles/dataManager.element.scss
@@ -168,4 +168,9 @@
         content: "\f067";
     }
 
+    // This is important in order to avoid the second open dialog to "jump" on resizing
+    position: absolute !important;
+    z-index: 5;
+
 }
+
